# mkw-sp

./: .gitignore  README.md  build.py  port.py  symbols.txt
.github/ISSUE_TEMPLATE/: enhancement-request.md  feature-request.md  mkw-spc-bug.md  vanilla-game-bug.md
.github/workflows/: build_sp.yml  build_tools.yml  jekyll-gh-pages.yml
assets/button/ctrl/: PauseMenuTimeAttack.brctr.json5
assets/fatal/blyt/: Fatal.brlyt.json5
assets/message/: MenuSP_E.bmg.json5  MenuSP_F.bmg.json5  MenuSP_G.bmg.json5  MenuSP_I.bmg.json5  MenuSP_J.bmg.json5  MenuSP_M.bmg.json5  MenuSP_N.bmg.json5  MenuSP_Q.bmg.json5  MenuSP_S.bmg.json5  MenuSP_U.bmg.json5
common/: ES.hh  IOS.cc
include/: Common.hh
loader/: Apploader.cc  DI.cc  DI.hh  Loader.cc
meta/: debug.xml  release.xml  test.xml
payload/egg/core/: eggAsyncDisplay.hh  eggColorFader.c  eggColorFader.hh  eggDisplay.h  eggDisplay.hh  eggHeap.cc  eggHeap.h  eggHeap.hh  eggScene.h  eggScene.hh  eggSceneManager.cc  eggSceneManager.h  eggSceneManager.hh  eggSystem.c  eggSystem.cc  eggSystem.h  eggSystem.hh  eggTaskThread.h  eggXfb.hh  eggXfbManager.hh
payload/game/battle/: CoinManager.hh
payload/game/effect/: EffectManager.h  EffectManager.hh  KartEffect.h  KartEffect.hh
payload/game/enemy/: EnemyManager.hh  KartEnemy.hh
payload/game/field/: Kcl.cc  (+5 more)
payload/platform/: guard.c
payload/revolution/: arc.c  arc.h  dvd.c  dvd.h  es.h  exi.c  kpad.h  nand.h  pad.h  so.h  wpad.h
payload/sp/: Bytes.h  Channel.cc  Commands.c  Commands.cc  CourseDatabase.hh  ExceptionSyms.cc  FixedString.hh  Host.cc  Host.h  Panic.cc  Payload.cc  PerfOverlay.cc  ScreenshotManager.cc  ShaUtil.cc  SimpleStopwatch.hh  StackTrace.h  ThumbnailManager.cc  ThumbnailManager.hh  TrackPackManager.cc  TrackPackManager.hh  Update.cc  WBZDecoder.hh  WU8Library.cc  WideUtil.h
protobuf/: Ghost.options  Ghost.proto  Matchmaking.proto  Room.options  Room.proto  TrackPacks.options  TrackPacks.proto  TrackServer.proto
stub/: Archive.cc  Stub.cc
tools/ghost-server/: Cargo.toml
tools/ghost-server/src/: main.rs
tools/matchmaking/: Cargo.toml
tools/netprotocol/: Cargo.toml  build.rs
tools/netprotocol/src/: async_stream.rs  client_id.rs  lib.rs  negotiation.rs
tools/portfinder/: Cargo.toml
tools/track-pack-server/: .gitignore  Cargo.toml  docker-compose.yml
tools/track-pack-server/migrations/: 20230812135940_initial.sql
tools/track-pack-server/src/: main.rs  pack_list.rs  slot_lookup.rs  track_database.rs  wrappers.rs
tools/track-pack-server/src/http/: error.rs  mod.rs  shared.rs
tools/track-pack-server/src/http/endpoints/: mod.rs  oauth.rs  search.rs  submit.rs  submit_track.rs  track.rs
tools/updateserver/: .gitignore  Cargo.toml
tools/updateserver/src/: main.rs
tools/wiimm-db-parser/: converter.py  main.py
www/: _config.yml  download.markdown  features.markdown  index.markdown  my-stuff.markdown  pack-upload.markdown
www/_includes/: header.html
(+300 files in other folders)
