[package]
name = "ghost-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
libhydrogen = "0.4.1"
netprotocol = { path = "../netprotocol" }
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", features = ["rustls-tls", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
