[package]
name = "netprotocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["io-util", "net"] }
libhydrogen = "0.4"
anyhow = "1.0.68"
prost = "0.11"
async-trait = "0.1.68"
argon2 = { version = "0.4.0", features = ["std"] }
passterm = "1.1.7"
zeroize = "1.5.5"

[build-dependencies]
prost-build = "0.11"

[features]
online_gameplay = []
pack_downloading = []
update = []
