[package]
name = "updateserver"
version = "0.0.0"
edition = "2021"

[dependencies]
libhydrogen = "0.4.1"
chrono = "0.4.19"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "io-util", "net", "sync", "fs"] }
netprotocol = { path = "../netprotocol" }
anyhow = "1.0.71"

# Startup password hashing will take insane amounts of time otherwise.
[profile.dev.package.argon2]
opt-level = 3
